fix(social-media-graphics): align text inside square bars

--- a/src/components/social-media-graphics/race/social-card.module.scss
+++ b/src/components/social-media-graphics/race/social-card.module.scss
@@ -32,6 +32,7 @@ body {
     }
 
     .bar {
+      margin-top: 4px;
       line-height: 1.25;
     }
   }
